--- a/package.json
+++ b/package.json
@@ -1,19 +1,21 @@
 {
-  "name": "bridge-of-hearts-backend",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "description": "",
-  "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "mongoose": "^8.8.3"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.7"
-  }
+    "name": "bridge-of-hearts-backend",
+    "version": "1.0.0",
+    "main": "index.js",
+    "scripts": {
+        "start": "node src/index.js",
+        "dev": "nodemon src/index.js"
+    },
+    "author": "Bridge of Hearts",
+    "license": "ISC",
+    "description": "",
+    "dependencies": {
+        "cors": "^2.8.5",
+        "dotenv": "^16.4.5",
+        "express": "^4.21.1",
+        "mongoose": "^8.8.3"
+    },
+    "devDependencies": {
+        "nodemon": "^3.1.7"
+    }
 }
