--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "main": "index.js",
     "scripts": {
         "start": "node src/index.js",
-        "dev": "nodemon src/index.js"
+        "dev": "nodemon",
+        "build": "tsc"
     },
     "author": "Bridge of Hearts",
     "license": "ISC",
@@ -16,6 +17,12 @@
         "mongoose": "^8.8.3"
     },
     "devDependencies": {
-        "nodemon": "^3.1.7"
+        "@types/cors": "^2.8.17",
+        "@types/express": "^5.0.0",
+        "@types/mongoose": "^5.11.96",
+        "@types/node": "^22.10.2",
+        "nodemon": "^3.1.7",
+        "ts-node": "^10.9.2",
+        "typescript": "^5.7.2"
     }
 }
